--- a/main.ipynb
+++ b/main.ipynb
@@ -15,105 +15,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>112</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>98</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>69</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>82</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>91</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>137</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>82</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>59</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>117</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>100 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      0\n",
-       "0   112\n",
-       "1    98\n",
-       "2    69\n",
-       "3    82\n",
-       "4    91\n",
-       "..  ...\n",
-       "95  137\n",
-       "96   82\n",
-       "97   59\n",
-       "98  117\n",
-       "99   20\n",
-       "\n",
-       "[100 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pd.read_csv(\"data/RUL_FD001.txt\", header=None)"
+    "rul = pd.read_csv(\"data/RUL_FD001.txt\", header=None)\n",
+    "df_train = pd.read_csv(\"data/train_FD001.txt\", sep=' ', header=None)\n",
+    "df_test = pd.read_csv(\"data/test_FD001.txt\", sep=' ', header=None)"
    ]
   },
   {
@@ -484,7 +390,7 @@
     }
    ],
    "source": [
-    "pd.read_csv(\"data/train_FD001.txt\", sep=' ', header=None)"
+    "df_train"
    ]
   },
   {
@@ -854,9 +760,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "pd.read_csv(\"data/test_FD001.txt\", sep=' ', header=None)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
