--- a/main.ipynb
+++ b/main.ipynb
@@ -13,13 +13,386 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "rul = pd.read_csv(\"data/RUL_FD001.txt\", header=None)\n",
     "df_train = pd.read_csv(\"data/train_FD001.txt\", sep=' ', header=None)\n",
-    "df_test = pd.read_csv(\"data/test_FD001.txt\", sep=' ', header=None)"
+    "df_train = df_train.drop(df_train.columns[-2:], axis=1)\n",
+    "df_test = pd.read_csv(\"data/test_FD001.txt\", sep=' ', header=None)\n",
+    "df_test = df_test.drop(df_test.columns[-2:], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>16</th>\n",
+       "      <th>17</th>\n",
+       "      <th>18</th>\n",
+       "      <th>19</th>\n",
+       "      <th>20</th>\n",
+       "      <th>21</th>\n",
+       "      <th>22</th>\n",
+       "      <th>23</th>\n",
+       "      <th>24</th>\n",
+       "      <th>25</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>192</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.0018</td>\n",
+       "      <td>0.0006</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>518.67</td>\n",
+       "      <td>641.89</td>\n",
+       "      <td>1583.84</td>\n",
+       "      <td>1391.28</td>\n",
+       "      <td>14.62</td>\n",
+       "      <td>...</td>\n",
+       "      <td>522.33</td>\n",
+       "      <td>2388.06</td>\n",
+       "      <td>8137.72</td>\n",
+       "      <td>8.3905</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>391</td>\n",
+       "      <td>2388</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>38.94</td>\n",
+       "      <td>23.4585</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>193</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0043</td>\n",
+       "      <td>-0.0003</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>518.67</td>\n",
+       "      <td>641.82</td>\n",
+       "      <td>1587.05</td>\n",
+       "      <td>1393.13</td>\n",
+       "      <td>14.62</td>\n",
+       "      <td>...</td>\n",
+       "      <td>522.70</td>\n",
+       "      <td>2387.98</td>\n",
+       "      <td>8131.09</td>\n",
+       "      <td>8.4167</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>392</td>\n",
+       "      <td>2388</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>39.06</td>\n",
+       "      <td>23.4085</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>194</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0018</td>\n",
+       "      <td>0.0003</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>518.67</td>\n",
+       "      <td>641.55</td>\n",
+       "      <td>1588.32</td>\n",
+       "      <td>1398.96</td>\n",
+       "      <td>14.62</td>\n",
+       "      <td>...</td>\n",
+       "      <td>522.58</td>\n",
+       "      <td>2387.99</td>\n",
+       "      <td>8140.58</td>\n",
+       "      <td>8.3802</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>391</td>\n",
+       "      <td>2388</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>39.11</td>\n",
+       "      <td>23.4250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0035</td>\n",
+       "      <td>-0.0004</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>518.67</td>\n",
+       "      <td>641.68</td>\n",
+       "      <td>1584.15</td>\n",
+       "      <td>1396.08</td>\n",
+       "      <td>14.62</td>\n",
+       "      <td>...</td>\n",
+       "      <td>522.49</td>\n",
+       "      <td>2387.93</td>\n",
+       "      <td>8140.44</td>\n",
+       "      <td>8.4018</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>391</td>\n",
+       "      <td>2388</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>39.13</td>\n",
+       "      <td>23.5027</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.0005</td>\n",
+       "      <td>0.0004</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>518.67</td>\n",
+       "      <td>641.73</td>\n",
+       "      <td>1579.03</td>\n",
+       "      <td>1402.52</td>\n",
+       "      <td>14.62</td>\n",
+       "      <td>...</td>\n",
+       "      <td>522.27</td>\n",
+       "      <td>2387.94</td>\n",
+       "      <td>8136.67</td>\n",
+       "      <td>8.3867</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>390</td>\n",
+       "      <td>2388</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>39.18</td>\n",
+       "      <td>23.4234</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>474</th>\n",
+       "      <td>2</td>\n",
+       "      <td>283</td>\n",
+       "      <td>0.0046</td>\n",
+       "      <td>0.0002</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>518.67</td>\n",
+       "      <td>643.78</td>\n",
+       "      <td>1602.03</td>\n",
+       "      <td>1429.67</td>\n",
+       "      <td>14.62</td>\n",
+       "      <td>...</td>\n",
+       "      <td>520.07</td>\n",
+       "      <td>2388.20</td>\n",
+       "      <td>8174.85</td>\n",
+       "      <td>8.5199</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>398</td>\n",
+       "      <td>2388</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>38.42</td>\n",
+       "      <td>23.0358</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>475</th>\n",
+       "      <td>2</td>\n",
+       "      <td>284</td>\n",
+       "      <td>-0.0006</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>518.67</td>\n",
+       "      <td>643.91</td>\n",
+       "      <td>1601.35</td>\n",
+       "      <td>1430.04</td>\n",
+       "      <td>14.62</td>\n",
+       "      <td>...</td>\n",
+       "      <td>519.95</td>\n",
+       "      <td>2388.21</td>\n",
+       "      <td>8166.83</td>\n",
+       "      <td>8.5291</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>395</td>\n",
+       "      <td>2388</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>38.23</td>\n",
+       "      <td>23.1196</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>476</th>\n",
+       "      <td>2</td>\n",
+       "      <td>285</td>\n",
+       "      <td>-0.0007</td>\n",
+       "      <td>0.0004</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>518.67</td>\n",
+       "      <td>643.67</td>\n",
+       "      <td>1596.84</td>\n",
+       "      <td>1431.17</td>\n",
+       "      <td>14.62</td>\n",
+       "      <td>...</td>\n",
+       "      <td>519.91</td>\n",
+       "      <td>2388.22</td>\n",
+       "      <td>8164.83</td>\n",
+       "      <td>8.5242</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>396</td>\n",
+       "      <td>2388</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>38.39</td>\n",
+       "      <td>23.1155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>477</th>\n",
+       "      <td>2</td>\n",
+       "      <td>286</td>\n",
+       "      <td>-0.0010</td>\n",
+       "      <td>-0.0003</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>518.67</td>\n",
+       "      <td>643.44</td>\n",
+       "      <td>1603.63</td>\n",
+       "      <td>1429.57</td>\n",
+       "      <td>14.62</td>\n",
+       "      <td>...</td>\n",
+       "      <td>519.51</td>\n",
+       "      <td>2388.22</td>\n",
+       "      <td>8169.97</td>\n",
+       "      <td>8.4932</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>395</td>\n",
+       "      <td>2388</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>38.33</td>\n",
+       "      <td>23.0169</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>478</th>\n",
+       "      <td>2</td>\n",
+       "      <td>287</td>\n",
+       "      <td>-0.0005</td>\n",
+       "      <td>0.0006</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>518.67</td>\n",
+       "      <td>643.85</td>\n",
+       "      <td>1608.50</td>\n",
+       "      <td>1430.84</td>\n",
+       "      <td>14.62</td>\n",
+       "      <td>...</td>\n",
+       "      <td>519.81</td>\n",
+       "      <td>2388.21</td>\n",
+       "      <td>8175.57</td>\n",
+       "      <td>8.5365</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>398</td>\n",
+       "      <td>2388</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>38.43</td>\n",
+       "      <td>23.0848</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>287 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     0    1       2       3      4       5       6        7        8      9   \\\n",
+       "192   2    1 -0.0018  0.0006  100.0  518.67  641.89  1583.84  1391.28  14.62   \n",
+       "193   2    2  0.0043 -0.0003  100.0  518.67  641.82  1587.05  1393.13  14.62   \n",
+       "194   2    3  0.0018  0.0003  100.0  518.67  641.55  1588.32  1398.96  14.62   \n",
+       "195   2    4  0.0035 -0.0004  100.0  518.67  641.68  1584.15  1396.08  14.62   \n",
+       "196   2    5  0.0005  0.0004  100.0  518.67  641.73  1579.03  1402.52  14.62   \n",
+       "..   ..  ...     ...     ...    ...     ...     ...      ...      ...    ...   \n",
+       "474   2  283  0.0046  0.0002  100.0  518.67  643.78  1602.03  1429.67  14.62   \n",
+       "475   2  284 -0.0006  0.0001  100.0  518.67  643.91  1601.35  1430.04  14.62   \n",
+       "476   2  285 -0.0007  0.0004  100.0  518.67  643.67  1596.84  1431.17  14.62   \n",
+       "477   2  286 -0.0010 -0.0003  100.0  518.67  643.44  1603.63  1429.57  14.62   \n",
+       "478   2  287 -0.0005  0.0006  100.0  518.67  643.85  1608.50  1430.84  14.62   \n",
+       "\n",
+       "     ...      16       17       18      19    20   21    22     23     24  \\\n",
+       "192  ...  522.33  2388.06  8137.72  8.3905  0.03  391  2388  100.0  38.94   \n",
+       "193  ...  522.70  2387.98  8131.09  8.4167  0.03  392  2388  100.0  39.06   \n",
+       "194  ...  522.58  2387.99  8140.58  8.3802  0.03  391  2388  100.0  39.11   \n",
+       "195  ...  522.49  2387.93  8140.44  8.4018  0.03  391  2388  100.0  39.13   \n",
+       "196  ...  522.27  2387.94  8136.67  8.3867  0.03  390  2388  100.0  39.18   \n",
+       "..   ...     ...      ...      ...     ...   ...  ...   ...    ...    ...   \n",
+       "474  ...  520.07  2388.20  8174.85  8.5199  0.03  398  2388  100.0  38.42   \n",
+       "475  ...  519.95  2388.21  8166.83  8.5291  0.03  395  2388  100.0  38.23   \n",
+       "476  ...  519.91  2388.22  8164.83  8.5242  0.03  396  2388  100.0  38.39   \n",
+       "477  ...  519.51  2388.22  8169.97  8.4932  0.03  395  2388  100.0  38.33   \n",
+       "478  ...  519.81  2388.21  8175.57  8.5365  0.03  398  2388  100.0  38.43   \n",
+       "\n",
+       "          25  \n",
+       "192  23.4585  \n",
+       "193  23.4085  \n",
+       "194  23.4250  \n",
+       "195  23.5027  \n",
+       "196  23.4234  \n",
+       "..       ...  \n",
+       "474  23.0358  \n",
+       "475  23.1196  \n",
+       "476  23.1155  \n",
+       "477  23.0169  \n",
+       "478  23.0848  \n",
+       "\n",
+       "[287 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train[df_train.iloc[:, 0] == 1]"
    ]
   },
   {
