--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,53 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0      True\n",
-       "1      True\n",
-       "2      True\n",
-       "3      True\n",
-       "4      True\n",
-       "5     False\n",
-       "6      True\n",
-       "7      True\n",
-       "8      True\n",
-       "9     False\n",
-       "10    False\n",
-       "11     True\n",
-       "12     True\n",
-       "13     True\n",
-       "14    False\n",
-       "15     True\n",
-       "16     True\n",
-       "17     True\n",
-       "18     True\n",
-       "19     True\n",
-       "20    False\n",
-       "21     True\n",
-       "22    False\n",
-       "23    False\n",
-       "24     True\n",
-       "25     True\n",
-       "dtype: bool"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "column_selected"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,24 +123,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test_X = []\n",
+    "test_label = []\n",
+    "test_no = []\n",
+    "\n",
+    "for i in range(1, 101):\n",
+    "    data_unit = data_test[df_test.iloc[:, 0] == i]\n",
+    "    test_X_unit = []\n",
+    "    test_no_unit = []\n",
+    "\n",
+    "    for j in range(window_size-1):\n",
+    "        X_pad = np.zeros([window_size, data_unit.shape[-1]])\n",
+    "        X_pad[-j-1:, :] = data_unit[:j+1, :]\n",
+    "        test_X_unit.append(X_pad)\n",
+    "        test_no_unit.append(i)\n",
+    "\n",
+    "    for j in range(len(data_unit)-window_size+1):\n",
+    "        test_X_unit.append(data_unit[j:j+window_size, :])\n",
+    "        test_no_unit.append(i)\n",
+    "\n",
+    "    rul_unit = len(data_unit)\n",
+    "    y_unit = np.arange(rul_unit, 0, -1) - 1\n",
+    "    y_unit[y_unit>y_cap] = y_cap\n",
+    "\n",
+    "    test_X += test_X_unit\n",
+    "    test_no += test_no_unit\n",
+    "    test_label += list(y_unit)\n",
+    "\n",
+    "test_X = np.array(test_X)\n",
+    "test_no = np.array(test_no)\n",
+    "test_label = np.array(test_label)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13096"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(test_X)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  1,   1,   1, ..., 100, 100, 100])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_no"
+   ]
   },
   {
    "cell_type": "code",
